--- a/xusanboy.html
+++ b/xusanboy.html
@@ -13,7 +13,7 @@
     <main>
         <div class="hgf">
             <h2>urec</h2>
-            <p></p>
+            <p>  xusanboy daturlashni o`rganyapti</p>
         </div>
     </main>
 </body>
